fixed heading overlapping nav bug

--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,13 @@ a {
 .header {
     background-image: linear-gradient(
         to right bottom,
-        rgba(111, 156, 235, 0.8),
-        rgba(33, 59, 84, 0.8)),
+        rgba(111, 156, 235, 0.9),
+        rgba(33, 59, 84, 0.9)),
         url(../img/header.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 60vh;
+    position: relative;
 }
 
 .header__text-box {
